tests/fail/partial_autoref_unary.stderr
error[E0600]: cannot apply unary operator `-` to type `&X`
  --> $DIR/partial_autoref_unary.rs:13:19
   |
13 |     assert_eq!(X, -&X);
   |                   ^^^ cannot apply unary operator `-`
   |
   = note: an implementation of `std::ops::Neg` might be missing for `&X`
